2011-03-15  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__GMPXX_TMPQ_UI): New macro.
	(__GMPXX_TMPQ_SI): New macro.
	(struct __gmp_binary_multiplies): Rewrite, using the new macros.
	(struct __gmp_binary_divides): Likewise.

2011-03-15 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom_interpolate_16pts.c: Remove ambiguity.

2011-03-14  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_mul): Set tuning min size considering print skew.

	* doc/gmp.texi: Make reference to "Formatted I/O" chapters from type
	specific I/O sections.

	* mpn/alpha/add_n.asm: Add _nc entry point.
	* mpn/alpha/sub_n.asm: Likewise.
	* mpn/mips64/add_n.asm: Likewise.
	* mpn/mips64/sub_n.asm: Likewise.
	* mpn/sparc64/ultrasparc1234/add_n.asm: Likewise.
	* mpn/sparc64/ultrasparc1234/sub_n: Likewise.

2011-03-13  Marc Glisse  <marc.glisse@inria.fr>

	* tests/cxx/t-ops2.cc: New file.
	* tests/cxx/Makefile.am: Added t-ops2.

2011-03-13  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/toom32_mul.c (mpn_toom32_mul): Make 'hi' be limb-sized
	for better code.

	* gmp-impl.h (MPN_IORD_U): Handle x86_64 as well as x86_32.  Generate
	no code for incrementing by constant 0.

2011-03-12  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h: Rename __GMPXX_TMP_* to __GMPXX_TMPZ_*. Use in more places.

2011-03-12  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc64/rshift.asm: Accept/return values correctly also for
	32-bit ABI.
	* mpn/powerpc64/lshift.asm: Likewise.

	* tune/powerpc.asm: Use powerpc syntax, not power syntax.

	* tune/common.c (speed_udiv_qrnnd_preinv1, etc): Remove.
	* tune/speed.c (routine): Remove udiv_qrnnd_preinv1, etc.

2011-03-12  Marc Glisse  <marc.glisse@inria.fr>

	* tests/cxx/t-istream.cc: Restrict mpq test in t-istream -s.

	* gmpxx.h: Remove leftover #undefs.

2011-03-11  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (udiv_qrnnd_preinv1, udiv_qrnnd_preinv2,
	udiv_qrnnd_preinv2gen): Remove obsolete macros.